# crypto-monitor

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG_MIGRATION_DESIGN.md  CONFIG_MIGRATION_IMPLEMENTATION.md  PLAN.md  README.md  WEBSOCKET_RECONNECT_IMPROVEMENTS.md  app.go  build-folder.ps1  build.ps1  crypto-monitor.spec  debug_kline.py  go.mod  go.sum  main.py  pyproject.toml  setup.iss  weblate.ini
.agent/workflows/: commit.md  i18n.md  update.md
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
assets/isl/: ChineseSimplified.isl
backend/: api.go  proxy.go
config/: __init__.py  migration.py  settings.py
core/: __init__.py  alert_manager.py  base_client.py  binance_client.py  dex_client.py  exchange_factory.py  i18n.py  icon_sources.py  logger.py  market_data_controller.py  models.py  notifier.py  okx_client.py  price_tracker.py  reconnect_strategy.py  symbol_search.py  unified_client.py  update_checker.py  utils.py  version.py  websocket_worker.py  worker_controller.py
core/utils/: __init__.py  network.py
docs/: user_manual_en.md  user_manual_zh.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: ButtonContainer.vue
frontend/src/router/: index.js
frontend/src/views/: Settings.vue
i18n/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  ja_JP.json  pt_BR.json  ru_RU.json  zh_CN.json
scripts/: create_bmp.py  sync_i18n.py
tests/: test_client_switch.py
tests/config/: test_settings.py
tests/core/: test_alert_manager.py  test_models.py
ui/: __init__.py  main_window.py  settings_window.py
ui/behaviors/: window_behavior.py
ui/managers/: pagination_manager.py  view_manager.py
ui/settings/pages/: about_page.py  appearance_page.py  notifications_page.py  pairs_page.py  proxy_page.py
ui/styles/: __init__.py  theme.py
ui/widgets/: __init__.py  add_pair_dialog.py  alert_dialog.py  alert_list_dialog.py  alert_setting_card.py  compact_controls.py  crypto_card.py  data_source_setting_card.py  fields.py  form_section.py  hover_card.py  mini_chart.py  pagination.py  proxy_form.py  setting_cards.py  toolbar.py
