[project]
name = "crypto-monitor"
version = "2.0.0"
description = "A desktop cryptocurrency price monitor using PyQt6 and OKX API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "python-okx>=0.3.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pyqt6-fluent-widgets>=1.0.0",  # Remove [full] to avoid numpy/scipy
]

[project.scripts]
crypto-monitor = "main:main"

[project.optional-dependencies]
fluent = [
    "PyQt-Fluent-Widgets",
]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
